RESOLVED FIXED16738
Collector block offset could be stored as an cell offset instead of a byte offset
https://bugs.webkit.org/show_bug.cgi?id=16738
Summary Collector block offset could be stored as an cell offset instead of a byte of...
Henry Mason
Reported 2008-01-04 23:23:26 PST
Contrary to comments in the code to the contrary, storing the "next" field as a byte offset rather than a cell offset seems to be hurting performance. Both shark and timing tests with SunSpider show a small performance gain by switching to cell offsets. As an added bonus, using cell offsets eliminates a lot of somewhat ugly casting.
Attachments
Cell offset usage (2.49 KB, patch)
2008-01-04 23:27 PST, Henry Mason
mjs: review+
Henry Mason
Comment 1 2008-01-04 23:27:15 PST
Created attachment 18284 [details] Cell offset usage
Maciej Stachowiak
Comment 2 2008-01-04 23:28:16 PST
Comment on attachment 18284 [details] Cell offset usage r=me
Maciej Stachowiak
Comment 3 2008-01-04 23:36:04 PST
Henry requests that anyone landing this patch should verify that it is a speedup since it is a little mysterious why.
Mark Rowe (bdash)
Comment 4 2008-01-05 00:26:28 PST
Landed in r29195. My testing showed this was a 0.4% speedup.
Note You need to log in before you can comment on or make changes to this bug.